* It was possible to use a variable $soc or $right inside a php code condition of some extrafields properties, this is no more true (this 2 variables are no more global variables).
* New hook files of modules actions_mymodule.class.php should "extends CommonHookActions"


***** ChangeLog for 18.0.2 compared to 18.0.1 *****
FIX: 17.0 PHP8: supplier invoice class
FIX: #24908 #25824
FIX: #25780 Various payment - List - Fatal error on PHP8.x
FIX: #25884
FIX: #25919
FIX: #25934 #25929
FIX: Accountancy - Update Quadra export format
FIX: add field "entity" only in $tabfieldinsert
FIX: add warning in the changelog
FIX: Avoid duplicate popup when popup setup to work as ajax
FIX: avoid excess line breaks
FIX: removed some php8 warning
FIX: avoid wrong backtopage url
FIX: bad check return for sendfile
FIX: Bad choice of filter on product/service
FIX: bad from and to
FIX: Bad length for value
FIX: Bad value of accounting account shown in list. Edit fails.
FIX: batch to update non valid backlink check
FIX: better sql request for all cases
FIX: Can't access to rec supplier invoice card
FIX: Can't delete a fourn commande row if a commande ligne is linked
FIX: could not delete a fourn commande row if a commande ligne is linked
FIX: create intervention from time spend
FIX: customer code search filter on invoice list
FIX: #CVE-2023-4197
FIX: date comparison for user expiration on user list
FIX: Debug the dispatch page to work on corrupted data
FIX: delete useless condition in massaction_pre
FIX: Edition of line on the list of timespent for all projects
FIX: Edition of shipment detail with lot not updating correctly tables
FIX: emailcollector to search existing thirdparty when extract not found
FIX: Error message
FIX: Expense report is created on the wrong entity
FIX: export FEC
FIX: Filter on partnership status
FIX: fix the wrong position of the hook 'printFieldListTitle' and 'printFieldListValue' in the stock at date page